// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`features/unified-share-modal/SharedLinkAccessMenu render() should render correct menu when submitting is false 1`] = `
<Tooltip
  className="usm-ftux-tooltip"
  constrainToScrollParent={false}
  constrainToWindow={true}
  isDisabled={false}
  isShown={false}
  onDismiss={[Function]}
  position="middle-left"
  showCloseButton={true}
  text={null}
  theme="callout"
>
  <DropdownMenu
    constrainToScrollParent={false}
    constrainToWindow={true}
    isRightAligned={false}
  >
    <PlainButton
      className="lnk"
      disabled={false}
    >
      <MenuToggle>
        <SharedLinkAccessLabel
          accessLevel="peopleInYourCompany"
          enterpriseName="Box"
          hasDescription={false}
          itemType="folder"
        />
      </MenuToggle>
    </PlainButton>
    <Menu
      className="usm-share-access-menu"
      isHidden={false}
      isSubmenu={false}
    />
  </DropdownMenu>
</Tooltip>
`;

exports[`features/unified-share-modal/SharedLinkAccessMenu render() should render correct menu when submitting is true 1`] = `
<Tooltip
  className="usm-ftux-tooltip"
  constrainToScrollParent={false}
  constrainToWindow={true}
  isDisabled={false}
  isShown={false}
  onDismiss={[Function]}
  position="middle-left"
  showCloseButton={true}
  text={null}
  theme="callout"
>
  <DropdownMenu
    constrainToScrollParent={false}
    constrainToWindow={true}
    isRightAligned={false}
  >
    <PlainButton
      className="lnk is-disabled bdl-is-disabled"
      disabled={true}
    >
      <MenuToggle>
        <SharedLinkAccessLabel
          accessLevel="peopleInYourCompany"
          enterpriseName="Box"
          hasDescription={false}
          itemType="folder"
        />
      </MenuToggle>
    </PlainButton>
    <Menu
      className="usm-share-access-menu"
      isHidden={false}
      isSubmenu={false}
    />
  </DropdownMenu>
</Tooltip>
`;

exports[`features/unified-share-modal/SharedLinkAccessMenu render() should render no access level menu items if disabled by something other than access policy 1`] = `
<Tooltip
  className="usm-ftux-tooltip"
  constrainToScrollParent={false}
  constrainToWindow={true}
  isDisabled={false}
  isShown={false}
  onDismiss={[Function]}
  position="middle-left"
  showCloseButton={true}
  text={null}
  theme="callout"
>
  <DropdownMenu
    constrainToScrollParent={false}
    constrainToWindow={true}
    isRightAligned={false}
  >
    <PlainButton
      className="lnk"
      disabled={false}
    >
      <MenuToggle>
        <SharedLinkAccessLabel
          accessLevel="peopleInYourCompany"
          enterpriseName="Box"
          hasDescription={false}
          itemType="folder"
        />
      </MenuToggle>
    </PlainButton>
    <Menu
      className="usm-share-access-menu"
      isHidden={false}
      isSubmenu={false}
    >
      <Tooltip
        constrainToScrollParent={false}
        constrainToWindow={true}
        isDisabled={true}
        key="tooltip-peopleInThisItem"
        position="top-center"
        text={
          <FormattedMessage
            defaultMessage="This option isn’t available for this item due to a security restriction or classification."
            id="boxui.unifiedShare.disabledShareLinkPermission"
          />
        }
        theme="default"
      >
        <SelectMenuItem
          isDisabled={false}
          isSelected={false}
          key="peopleInThisItem"
          onClick={[Function]}
        >
          <SharedLinkAccessLabel
            accessLevel="peopleInThisItem"
            enterpriseName="Box"
            hasDescription={true}
            itemType="folder"
          />
        </SelectMenuItem>
      </Tooltip>
    </Menu>
  </DropdownMenu>
</Tooltip>
`;

exports[`features/unified-share-modal/SharedLinkAccessMenu render() should render tooltipContent if provided 1`] = `
<Tooltip
  className="usm-ftux-tooltip"
  constrainToScrollParent={false}
  constrainToWindow={true}
  isDisabled={false}
  isShown={true}
  onDismiss={[Function]}
  position="middle-left"
  showCloseButton={true}
  text="Hello, world!"
  theme="callout"
>
  <DropdownMenu
    constrainToScrollParent={false}
    constrainToWindow={true}
    isRightAligned={false}
  >
    <PlainButton
      className="lnk"
      disabled={false}
    >
      <MenuToggle>
        <SharedLinkAccessLabel
          accessLevel="peopleInYourCompany"
          enterpriseName="Box"
          hasDescription={false}
          itemType="folder"
        />
      </MenuToggle>
    </PlainButton>
    <Menu
      className="usm-share-access-menu"
      isHidden={false}
      isSubmenu={false}
    />
  </DropdownMenu>
</Tooltip>
`;

exports[`features/unified-share-modal/SharedLinkAccessMenu render() should render tooltips for access level menu items if disabled by access policy 1`] = `
<Tooltip
  className="usm-ftux-tooltip"
  constrainToScrollParent={false}
  constrainToWindow={true}
  isDisabled={false}
  isShown={false}
  onDismiss={[Function]}
  position="middle-left"
  showCloseButton={true}
  text={null}
  theme="callout"
>
  <DropdownMenu
    constrainToScrollParent={false}
    constrainToWindow={true}
    isRightAligned={false}
  >
    <PlainButton
      className="lnk"
      disabled={false}
    >
      <MenuToggle>
        <SharedLinkAccessLabel
          accessLevel="peopleInYourCompany"
          enterpriseName="Box"
          hasDescription={false}
          itemType="folder"
        />
      </MenuToggle>
    </PlainButton>
    <Menu
      className="usm-share-access-menu"
      isHidden={false}
      isSubmenu={false}
    >
      <Tooltip
        constrainToScrollParent={false}
        constrainToWindow={true}
        isDisabled={false}
        key="tooltip-peopleWithTheLink"
        position="top-center"
        text={
          <FormattedMessage
            defaultMessage="This option isn’t available for this item due to a security restriction or classification."
            id="boxui.unifiedShare.disabledShareLinkPermission"
          />
        }
        theme="default"
      >
        <SelectMenuItem
          isDisabled={true}
          isSelected={false}
          key="peopleWithTheLink"
          onClick={[Function]}
        >
          <SharedLinkAccessLabel
            accessLevel="peopleWithTheLink"
            enterpriseName="Box"
            hasDescription={true}
            itemType="folder"
          />
        </SelectMenuItem>
      </Tooltip>
      <Tooltip
        constrainToScrollParent={false}
        constrainToWindow={true}
        isDisabled={false}
        key="tooltip-peopleInYourCompany"
        position="top-center"
        text={
          <FormattedMessage
            defaultMessage="This option isn’t available for this item due to a security restriction or classification."
            id="boxui.unifiedShare.disabledShareLinkPermission"
          />
        }
        theme="default"
      >
        <SelectMenuItem
          isDisabled={true}
          isSelected={true}
          key="peopleInYourCompany"
          onClick={[Function]}
        >
          <SharedLinkAccessLabel
            accessLevel="peopleInYourCompany"
            enterpriseName="Box"
            hasDescription={true}
            itemType="folder"
          />
        </SelectMenuItem>
      </Tooltip>
      <Tooltip
        constrainToScrollParent={false}
        constrainToWindow={true}
        isDisabled={true}
        key="tooltip-peopleInThisItem"
        position="top-center"
        text={
          <FormattedMessage
            defaultMessage="This option isn’t available for this item due to a security restriction or classification."
            id="boxui.unifiedShare.disabledShareLinkPermission"
          />
        }
        theme="default"
      >
        <SelectMenuItem
          isDisabled={false}
          isSelected={false}
          key="peopleInThisItem"
          onClick={[Function]}
        >
          <SharedLinkAccessLabel
            accessLevel="peopleInThisItem"
            enterpriseName="Box"
            hasDescription={true}
            itemType="folder"
          />
        </SelectMenuItem>
      </Tooltip>
    </Menu>
  </DropdownMenu>
</Tooltip>
`;

exports[`features/unified-share-modal/SharedLinkAccessMenu render() should render tooltips for access level menu items if disabled by malicious content 1`] = `
<Tooltip
  className="usm-ftux-tooltip"
  constrainToScrollParent={false}
  constrainToWindow={true}
  isDisabled={false}
  isShown={false}
  onDismiss={[Function]}
  position="middle-left"
  showCloseButton={true}
  text={null}
  theme="callout"
>
  <DropdownMenu
    constrainToScrollParent={false}
    constrainToWindow={true}
    isRightAligned={false}
  >
    <PlainButton
      className="lnk"
      disabled={false}
    >
      <MenuToggle>
        <SharedLinkAccessLabel
          accessLevel="peopleInYourCompany"
          enterpriseName="Box"
          hasDescription={false}
          itemType="folder"
        />
      </MenuToggle>
    </PlainButton>
    <Menu
      className="usm-share-access-menu"
      isHidden={false}
      isSubmenu={false}
    >
      <Tooltip
        constrainToScrollParent={false}
        constrainToWindow={true}
        isDisabled={false}
        key="tooltip-peopleWithTheLink"
        position="top-center"
        text={
          <FormattedMessage
            defaultMessage="This option isn’t available for this item due to a security policy."
            id="boxui.unifiedShare.disabledMaliciousContentShareLinkPermission"
          />
        }
        theme="default"
      >
        <SelectMenuItem
          isDisabled={true}
          isSelected={false}
          key="peopleWithTheLink"
          onClick={[Function]}
        >
          <SharedLinkAccessLabel
            accessLevel="peopleWithTheLink"
            enterpriseName="Box"
            hasDescription={true}
            itemType="folder"
          />
        </SelectMenuItem>
      </Tooltip>
      <Tooltip
        constrainToScrollParent={false}
        constrainToWindow={true}
        isDisabled={false}
        key="tooltip-peopleInYourCompany"
        position="top-center"
        text={
          <FormattedMessage
            defaultMessage="This option isn’t available for this item due to a security policy."
            id="boxui.unifiedShare.disabledMaliciousContentShareLinkPermission"
          />
        }
        theme="default"
      >
        <SelectMenuItem
          isDisabled={true}
          isSelected={true}
          key="peopleInYourCompany"
          onClick={[Function]}
        >
          <SharedLinkAccessLabel
            accessLevel="peopleInYourCompany"
            enterpriseName="Box"
            hasDescription={true}
            itemType="folder"
          />
        </SelectMenuItem>
      </Tooltip>
      <Tooltip
        constrainToScrollParent={false}
        constrainToWindow={true}
        isDisabled={true}
        key="tooltip-peopleInThisItem"
        position="top-center"
        text={
          <FormattedMessage
            defaultMessage="This option isn’t available for this item due to a security restriction or classification."
            id="boxui.unifiedShare.disabledShareLinkPermission"
          />
        }
        theme="default"
      >
        <SelectMenuItem
          isDisabled={false}
          isSelected={false}
          key="peopleInThisItem"
          onClick={[Function]}
        >
          <SharedLinkAccessLabel
            accessLevel="peopleInThisItem"
            enterpriseName="Box"
            hasDescription={true}
            itemType="folder"
          />
        </SelectMenuItem>
      </Tooltip>
    </Menu>
  </DropdownMenu>
</Tooltip>
`;
